<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="8dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/times_notified_today"
              android:layout_gravity="center"
              android:textStyle="bold"
              android:textSize="23sp"
              android:padding="8dp"
              android:textColor="@android:color/black"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/default_number_04"
              android:gravity="center"
              android:textSize="100sp"
              android:textStyle="bold"
              android:padding="50dp"
              android:textColor="@android:color/black"
              android:background="@drawable/circle"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/weekly_avg"
              android:layout_gravity="center"
              android:textSize="23sp"
              android:layout_marginTop="20dp"
              android:padding="8dp"
              android:textColor="@android:color/black"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="@string/default_number_03"
              android:textSize="20sp"
              android:gravity="center"
              android:padding="20dp"
              android:textColor="@android:color/black"
              android:elevation="2dp"
              android:translationZ="2dp"
              android:background="@drawable/circle_with_shadow"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_data"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button"/>

</LinearLayout>